# Threadindex

./: .gitignore  LICENSE  README.md  pyproject.toml
samples/: chatgpt_conversations.json  deepseek_conversations.json
src/threadindex/: cli.py  config.py  db.py  importer.py  logging.py  models.py  tui.py  utils.py
src/threadindex/importers/: __init__.py  base.py  chatgpt.py  deepseek.py
